# Mikroe-Training

./: README.md
Lecture_1/Led_Blinking/: CMakeLists.txt
Lecture_1/Led_Curtain/: CMakeLists.txt
Lecture_1/Led_Curtain/build-Fusion for ARM v8 STM32F407ZG PD/: .ninja_deps  CMakeCache.txt  Led_Curtain.dbg  Led_Curtain.dlt  Led_Curtain.lst  Led_Curtain_callertable.txt  toolchain.cmake
Lecture_2/Statements/: CMakeLists.txt  main.c
Lecture_2/Statements/build-Fusion for PIC @ 64 MHz/: build.ninja
Lecture_3/Button/: CMakeLists.txt  compile_commands.json  main.c
Lecture_3/Button/.meproject/: config.json
Lecture_3/Button/.meproject/setup/: setup.json
Lecture_3/Button/build-Fusion for ARM @ 168 MHz/: build.ninja
Lecture_3/Clock_Test_PIC97J94/: CMakeLists.txt  compile_commands.json
Lecture_3/Clock_Test_PIC97J94/build-EasyPIC PRO @ 64 MHz/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  toolchain.cmake
Lecture_3/LED_Test/: CMakeLists.txt
Lecture_3/LED_Test/.meproject/: config.json
Lecture_4/Polling_example/: CMakeLists.txt  compile_commands.json  main.c
Lecture_4/Polling_example/build-Fusion for STM32 @ 168 MHz/: build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
Lecture_4/STM32_GPIO_interrupt_example/: CMakeLists.txt  compile_commands.json  main.c
Lecture_4/STM32_GPIO_interrupt_example/.meproject/: config.json
Lecture_4/STM32_GPIO_interrupt_example/build-Fusion for PIC @ 64 MHz/: build.ninja  toolchain.cmake
week_1/Lecture_1/LCD_example/: CMakeLists.txt  compile_commands.json  main.c
week_1/Lecture_1/LCD_example/.meproject/: config.json
week_1/Lecture_1/LCD_example/build-Fusion for STM32 @ 168 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  LCD_example.dbg  LCD_example.dlt  LCD_example.hex  LCD_example.lst  LCD_example_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_1/LED_Blinking/: CMakeLists.txt  compile_commands.json
week_1/Lecture_1/LED_Blinking/.meproject/: config.json
week_1/Lecture_1/LED_Blinking/build-Fusion for STM32 @ 168 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  LED_Blinking.dbg  LED_Blinking.dlt  LED_Blinking.hex  LED_Blinking.lst  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_1/LED_Curtain/: CMakeLists.txt  compile_commands.json  main.c
week_1/Lecture_1/LED_Curtain/.meproject/: config.json
week_1/Lecture_1/LED_Curtain/build-Fusion for STM32 @ 168 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  LED_Curtain.dbg  LED_Curtain.dlt  LED_Curtain.hex  LED_Curtain.lst  LED_Curtain_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_2/Keywords/: CMakeLists.txt  compile_commands.json
week_1/Lecture_2/Keywords/.meproject/: config.json
week_1/Lecture_2/Keywords/build-EasyPIC PRO @ 64 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  Keywords.dbg  Keywords.dlt  Keywords.hex  Keywords.lst  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_2/Keywords/build-Fusion for PIC @ 64 MHz/: .ninja_log  Keywords.dbg  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_2/Malloc_Learn/: CMakeLists.txt  compile_commands.json
week_1/Lecture_2/Malloc_Learn/.meproject/: config.json
week_1/Lecture_2/Malloc_Learn/build-EasyPIC PRO @ 64 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  Malloc_Learn.dbg  Malloc_Learn.dlt  Malloc_Learn.hex  Malloc_Learn.lst  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_2/Malloc_Learn/build-Fusion for PIC @ 64 MHz/: cmake_install.cmake  compile_commands.json
week_1/Lecture_3/Button/: CMakeLists.txt  compile_commands.json  main.c
week_1/Lecture_3/Button/.meproject/: config.json
week_1/Lecture_3/Button/build-Fusion for ARM @ 168 MHz/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_3/Button/build-Fusion for STM32 @ 168 MHz/: .ninja_deps  .ninja_log  Button.dbg  Button.dlt  Button.hex  Button.lst  Button_callertable.txt  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_1/Lecture_4/PIC_GPIO_example/: CMakeLists.txt  compile_commands.json
week_1/Lecture_4/PIC_GPIO_example/.meproject/: config.json
week_1/Lecture_4/PIC_GPIO_example/build-EasyPIC PRO @ 64 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  PIC_GPIO_example.dbg  PIC_GPIO_example.dlt  PIC_GPIO_example.hex  PIC_GPIO_example.lst  PIC_GPIO_example_callertable.txt  build.ninja  compile_commands.json
week_2/Lecture_1/UART1_Demo1/: CMakeLists.txt  compile_commands.json  main.c
week_2/Lecture_1/UART1_Demo1/.meproject/: config.json
week_2/Lecture_1/UART1_Demo1/build-EasyPIC PRO @ 64 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  UART1_Demo.dbg  UART1_Demo.dlt  UART1_Demo.hex  UART1_Demo.lst  UART1_Demo_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_2/Lecture_1/UART_Demo2/: CMakeLists.txt  compile_commands.json  main.c
week_2/Lecture_1/UART_Demo2/.meproject/: config.json
week_2/Lecture_1/UART_Demo2/build-EasyPIC PRO @ 64 MHz/: .ninja_deps  .ninja_log  CMakeCache.txt  UART_Demo2.dbg  UART_Demo2.dlt  UART_Demo2.hex  UART_Demo2.lst  UART_Demo2_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
week_2/Lecture_2/ADC_Test_Example_1/: CMakeLists.txt  compile_commands.json  main.c
week_2/Lecture_2/ADC_Test_Example_1/.meproject/: config.json
week_2/Lecture_2/ADC_Test_Example_1/build-EasyPIC PRO @ 64 MHz/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  (+1 more)
week_2/Lecture_2/PIC_ADC_Bare_Metal/: CMakeLists.txt  compile_commands.json  main.c
week_2/Lecture_2/PIC_ADC_Example_Interrupt/: CMakeLists.txt  compile_commands.json  main.c
week_2/Lecture_3/I2C_Test_1/: CMakeLists.txt  compile_commands.json  main.c
week_2/Lecture_3/I2C_Test_2/: CMakeLists.txt  compile_commands.json  main.c
week_2/Lecture_4/PWMExample1/: CMakeLists.txt  compile_commands.json  main.c
(+604 files in other folders)
